2013-07-02 Pedro Vicente  <pvicente@uci.edu>

	* Add in_grp_3.cdl group data for ncpdq testing
  
	* Add ncpdq test #36 (Groups) Re-order 2D variable with record (-C , no MSA)
	* Add ncpdq test #37 (Groups) Re-order 2D variable with record (no -C , no MSA)


2013-07-01 Pedro Vicente  <pvicente@uci.edu>

	* Add in_grp_3.cdl group data for ncpdq testing
  
	* Add ncpdq test #32 (Groups) Re-order 2D variable (-C , no MSA)
	* Add ncpdq test #33 (Groups) Re-order 2D variable (no -C , no MSA)  
	* Add ncpdq test #34 (Groups) Re-order 2D variable (no -C , MSA)
	* Add ncpdq test #35 (Groups) Re-order 2D variable (-C , MSA)  

2013-06-29  Charlie Zender  <zender@uci.edu>

	* Add -G, --gpe, --unn to ncpdq documentation

2013-06-28 Pedro Vicente  <pvicente@uci.edu>

	* nco_lst_dmn_mk_trv() Build Name-ID array from input dimension names

	* nco_var_dmn_scp() Variable has dimensions in scope of GTT dimension

2013-06-27 Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq test #24 Re-order several variables

2013-06-27 Pedro Vicente  <pvicente@uci.edu>

	* add a group use case for ncpdq in in_grp_3.cdl.

2013-06-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.2 release procedure:
 	Changes since nco-4_3_1: -X aux, ncflint/ncpdq -g -G --unn
	cd ~/nco;cvs tag -d nco-4_3_2;cvs tag -d nco-4_3_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.2 release"
	cvs tag -c nco-4_3_2;cvs tag -c nco-4_3_2-1

2013-06-25  Charlie Zender  <zender@uci.edu>

	* Mention implications of type promotion in memory requirements

	* Add Yellowstone default /ncar/opt/hpss/hsi to list of HSI search paths

	* Add NCO_MMR_DBG infrastructure for nco_malloc()
	Does not (yet) report requests made with nco_malloc_flg() and nco_malloc_dbg()
	export NCO_MMR_DBG=1;ncea -O -D 3 -d time,0,2 -p ~ big_bug5.nc ~/big_avg.nc

	* Replace many hardcoded dbg_lvl's with symbolic names

2013-06-24  Charlie Zender  <zender@uci.edu>

	* Prevent overwriting global attributes (like history) in ncecat, ncflint, ncpdq
