@@ -1,3 +1,8 @@
+2013-07-03 Pedro Vicente  <pvicente@uci.edu>
+
+	* Add ncpdq test #38 (Groups) Re-order 2D variable with record (-C , MSA)
+	
+
 2013-07-02 Pedro Vicente  <pvicente@uci.edu>
 
 	* Add in_grp_3.cdl group data for ncpdq testing
